# havoc

./: .gitignore  AGENTS.md  README.md  flake.nix
.github/workflows/: ci.yml
mcu/: .gitignore  README.md
mcu/app/: CMakeLists.txt  prj.conf
mcu/app/src/: main.c
mcu/manifest/: west.yml
ros/src/havoc_bringup/: CMakeLists.txt  package.xml
ros/src/havoc_bringup/launch/: autonomous.launch.py  teleop.launch.py
ros/src/havoc_bringup/test/: test_launches.py
ros/src/havoc_description/: CMakeLists.txt  package.xml
ros/src/havoc_description/config/: ros_gz_bridge.yaml
ros/src/havoc_description/launch/: circle.launch.py  slam.launch.py  spawn.launch.py  view.launch.py
ros/src/havoc_description/rviz/: sensors.rviz  slam.rviz
ros/src/havoc_description/test/: test_launches.py  test_slam_e2e.py
ros/src/havoc_description/urdf/: havoc.urdf.xacro
ros/src/havoc_description/worlds/: havoc_sim.sdf
ros/src/havoc_policies/: package.xml  setup.cfg  setup.py
ros/src/havoc_policies/config/: twist_mux.yaml
ros/src/havoc_policies/havoc_policies/: base.py  constant.py
ros/src/havoc_policies/test/: test_base.py
ros/src/havoc_teleop/: CMakeLists.txt  package.xml
ros/src/havoc_teleop/launch/: teleop.launch.py
sim/: Dockerfile.ros  Dockerfile.zephyr  README.md  docker-compose.yml  zephyr-entrypoint.sh
training/: README.md  pyproject.toml
training/havoc_gym/: __init__.py  observation.py  reward.py  sim_env.py
training/scripts/: eval.py  launch_parallel_sims.sh  train.py  verify_env.py  verify_parallel.py
training/tests/: test_observation.py  test_reward.py
