<?xml version="1.0"?>
<package format="3">
  <name>havoc_description</name>
  <version>0.0.1</version>
  <description>URDF/xacro and spawn launch for the Havoc RC car.</description>
  <maintainer email="sdelcore@gmail.com">Spencer Delcore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
