<?xml version="1.0"?>
<package format="3">
  <name>havoc_policies</name>
  <version>0.0.1</version>
  <description>
    Driving policy abstractions for Havoc. A "policy" is anything that
    reads observations and publishes a Twist; concrete subclasses include
    constant, teleop-passthrough, pure pursuit, RL, and Nav2 adapters.
    Each policy publishes on its own cmd_vel_&lt;name&gt; topic; twist_mux
    arbitrates them onto /cmd_vel.
  </description>
  <maintainer email="sdelcore@gmail.com">Spencer Delcore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
