<?xml version="1.0"?>
<package format="3">
  <name>havoc_teleop</name>
  <version>0.0.1</version>
  <description>Driver-facing teleop launches for the Havoc RC car.</description>
  <maintainer email="sdelcore@gmail.com">Spencer Delcore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>havoc_description</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
